* Fixed logo spacing with logo in menu and boxed layout combination.

--- a/style.less
+++ b/style.less
@@ -467,6 +467,10 @@ header#masthead {
 	}
 }
 
+.layout-boxed header#masthead.masthead-logo-in-menu .logo {
+	margin-left: 25px;
+}
+
 body.ie-8,body.ie-9 {
 	header#masthead hgroup {
 		#header-sidebar {
